--- a/templates/layout.html
+++ b/templates/layout.html
@@ -62,6 +62,30 @@
               <li><a href="{{url_for('page_form')}}">Form</a></li>
               {% endif %}
 
+              {% if selected_menu_item == "page_blogpost_list" %}
+              <li class="active"><a href="#">Blogposts</a></li>
+              {% else %}
+              <li><a href="{{url_for('page_blogpost_list')}}">Blogposts</a></li>
+              {% endif %}              
+              
+              {% if selected_menu_item == "page_award_list" %}
+              <li class="active"><a href="#">Awards</a></li>
+              {% else %}
+              <li><a href="{{url_for('page_award_list')}}">Awards</a></li>
+              {% endif %}
+
+              {% if selected_menu_item == "page_user_list" %}
+              <li class="active"><a href="#">Users</a></li>
+              {% else %}
+              <li><a href="{{url_for('page_user_list')}}">Users</a></li>
+              {% endif %}
+
+              {% if selected_menu_item == "page_lovmaster_list" %}
+              <li class="active"><a href="#">LOV Masters</a></li>
+              {% else %}
+              <li><a href="{{url_for('page_lovmaster_list')}}">LOV Masters</a></li>
+              {% endif %}
+
               <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                       aria-haspopup="true" aria-expanded="false">Help<span class="caret"></span></a>
